groupinstance and edit object actuator #35188

Closed
opened 2013-05-02 14:44:41 +02:00 by endi endike · 9 comments

%%%--- Operating System, Graphics card ---
win7, gef430

- Blender version with error, and version that worked ---

error: 2.67 Release Candidate

- Short description of error ---

blender exit when using an edit object actuator in a group instance

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. load the two attached blends
  2. start game_bug.blend (it will link a group from the game_prefab.blend)
  3. start game
  4. after some monkeys created, blender will exit

%%%

%%%--- Operating System, Graphics card --- win7, gef430 - Blender version with error, and version that worked --- error: 2.67 Release Candidate - Short description of error --- blender exit when using an edit object actuator in a group instance - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. load the two attached blends 2. start game_bug.blend (it will link a group from the game_prefab.blend) 3. start game 4. after some monkeys created, blender will exit %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%
Member

%%%I confirm the crash in linux 64bit.

game_prefab.blend plays fine. Linking the group from a new file always crashes.
As far as I can tell, a reference is being deleted twice in Value, causing a segfault. Reference count is -1.%%%

%%%I confirm the crash in linux 64bit. game_prefab.blend plays fine. Linking the group from a new file always crashes. As far as I can tell, a reference is being deleted twice in Value, causing a segfault. Reference count is -1.%%%

Added subscriber: @raco

Added subscriber: @raco

Also confirmed with 2.71 on Windows 7 64.

Also confirmed with 2.71 on Windows 7 64.

Added subscriber: @panzergame

Added subscriber: @panzergame

Confirm the bug, blender 2.76.

Confirm the bug, blender 2.76.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a15a3952f4

This issue was referenced by a15a3952f4270bb0ddb28d8118fc63707e065bde
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35188
No description provided.